# cherry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ONBOARDING.md  README.md  index.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
api/: generate.py  query.py
api/db/: __init__.py  database.py  orm.py
backend/: README.md  app.py  generate.py  pyproject.toml  requirements.txt
backend/api/: app.py  courses_2021_desc.csv  explorer.py  generate.py  query.py  routes.py  utils.py  write.py
backend/api/orm/: database.py  orm.py
backend/cherry/: __init__.py  course.py  database.py  log.py  sections.py  status.py
backend/cherry/models/: __init__.py  course.py  instructor.py  section.py  user_preferences.py
backend/docs/: app.html  cherry.html  index.html  search.js
backend/docs/cherry/: __init__.html  course.html  database.html  log.html  models.html  status.html
backend/docs/cherry/models/: __init__.html  base.html  course.html  index.html  instructor.html  section.html
backend/docs/cherry/processing/: index.html  rmp.html
backend/docs/tests/: __init__.html
backend/docs/tests/models/: __init__.html  test_course.html  test_section.html
backend/html/cherry/: index.html
backend/html/cherry/models/: course.html  instructor.html
backend/tests/models/: test_course.py  test_section.py  test_user_preferences.py
data/course_data_extraction/: extract_course_data.py
data/courses/: app.py  fetch.sh
data/mongodb_upload/: raw_course_data_upload.py
static/: explorer.py  generate.py  utils.py  write.py
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.js  constants.js  index.js
web/src/components/: CourseList.js  NavBar.js  (+10 more)
(+8 files in other folders)
