[tool.poetry]
name = "cherry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
pydantic = "^1.8.2"
pdoc = "^8.0.1"
python-dotenv = "^0.19.1"
pymongo = "^3.12.1"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
